[UPDATE] add mqtt

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,5 +14,7 @@ board = esp32-s3-devkitc-1
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
+	adafruit/Adafruit BusIO
 	adafruit/Adafruit MLX90614 Library@^2.1.5
 	sparkfun/SparkFun MAX3010x Pulse and Proximity Sensor Library@^1.1.2
+	knolleary/PubSubClient@^2.8
