[UPDATE] add mqtt comand to scan

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,3 +18,4 @@ lib_deps =
 	adafruit/Adafruit MLX90614 Library@^2.1.5
 	sparkfun/SparkFun MAX3010x Pulse and Proximity Sensor Library@^1.1.2
 	knolleary/PubSubClient@^2.8
+	tzapu/WiFiManager@^2.0.17
