[UPDATE] firebase works

--- a/platformio.ini
+++ b/platformio.ini
@@ -5,7 +5,6 @@
 ;   Library options: dependencies, extra library storages
 ;   Advanced options: extra scripting
 ;
-; board = esp32doit-devkit-v1
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
@@ -17,8 +16,6 @@ monitor_speed = 115200
 lib_deps = 
 	adafruit/Adafruit BusIO
 	adafruit/Adafruit MLX90614 Library@^2.1.5
-	; sparkfun/SparkFun MAX3010x Pulse and Proximity Sensor Library@^1.1.2
-	; knolleary/PubSubClient@^2.8
 	tzapu/WiFiManager@^2.0.17
-	mobizt/Firebase ESP32 Client@^4.4.17
 	worldfamouselectronics/PulseSensor Playground@^2.4.0
+	mobizt/FirebaseClient@^2.0.3
