--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ platform = espressif32
 framework = arduino
 board = esp32-s3-devkitc-1
 monitor_speed = 115200
+monitor_filters = send_on_enter
 lib_deps = 
 	adafruit/Adafruit BusIO
 	adafruit/Adafruit MLX90614 Library@^2.1.5
